--- a/assets/style.scss
+++ b/assets/style.scss
@@ -16,10 +16,6 @@
 
 }
 
-.dark {
-  --background-color: #222;
-}
-
 $w-wide: 1200px;
 $w-mid: 960px;
 $w-slim: 40rem;
